--- a/flight/index.html
+++ b/flight/index.html
@@ -140,7 +140,7 @@
                         <a class="nav-link active" href="#" aria-current="page">Home <span class="visually-hidden">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="signup.html">Login</a>
+                        <a class="nav-link" href="login.html">Login</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact Us</a>
