--- a/flight/booking.html
+++ b/flight/booking.html
@@ -25,7 +25,7 @@ html, body{
 .content{
     background-color:white;
     width:500px;
-    height:600px;
+    height:700px;
 }
 img{
     width: 100%;
@@ -104,6 +104,8 @@ button:hover{
                     <option>NON-BINARY</option>
                 </select>
             </div>
+                <input type="text" placeholder="From">
+                <input type="text" placeholder="To">
                 <input type="email" placeholder="EMAIL ADDRESS">
                 <input type="number" placeholder="CODE"><br>
                 <button type="button">Submit</button>
